--- a/index.html
+++ b/index.html
@@ -1,1 +1,53 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Condensed Matter Physics Lab</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+  <header>
+    <h1>Condensed Matter Physics (CMP) Lab</h1>
+    <h3>Department of Physics, Jashore University of Science and Technology</h3>
+  </header>
+
+  <section id="overview">
+    <h2>Lab Overview</h2>
+    <p>
+      The Condensed Matter Physics (CMP) Lab at the Department of Physics, JUST is focused on computational research
+      in condensed matter physics. We explore the structural, electronic, and thermodynamic properties of advanced materials
+      using Density Functional Theory (DFT) and other quantum simulations. Our work contributes to material innovations in
+      energy storage, spintronics, and optoelectronics.
+    </p>
+  </section>
+
+  <section id="members">
+    <h2>Lab Members</h2>
+    <ul>
+      <li><strong>Faculty:</strong> Md. Mehade Hasan, Debashis Roy, Mohammad Tanvir Ahmed, Abdullah Al Roman</li>
+      <li><strong>Graduate Students:</strong> [List names]</li>
+      <li><strong>Undergraduate Researchers:</strong> [List names]</li>
+    </ul>
+  </section>
+
+  <section id="highlights">
+    <h2>Research Highlights</h2>
+    <p>Below are selected visual results from our recent publications.</p>
+    <img src="images/figure1.png" alt="Figure 1" width="400">
+    <img src="images/figure2.png" alt="Figure 2" width="400">
+    <!-- Add more figures as needed -->
+  </section>
+
+  <section id="contact">
+    <h2>Contact</h2>
+    <p>Email: cmplab@just.edu.bd</p>
+    <p>Location: Department of Physics, JUST, Jashore-7408, Bangladesh</p>
+  </section>
+
+  <footer>
+    <p>&copy; 2025 CMP Lab, JUST</p>
+  </footer>
+</body>
+</html>
 
