--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
   <header>
-    <h1>Condensed Matter Physics (CMP) Lab</h1>
+  <h1 style="font-family: 'Copperplate Gothic', 'Copperplate', serif; color: #003366;">
+  Condensed Matter Physics (CMP) Lab
+</h1>
     <h3>Department of Physics, Jashore University of Science and Technology</h3>
   </header>
 
