--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <header>
-  <h1>
-  Condensed Matter Physics (CMP) Lab
-</h1>
-    <h3>Department of Physics, Jashore University of Science and Technology</h3>
-  </header>
+<header>
+  <div class="header-container">
+    <h1>Condensed Matter Physics (CMP) Lab</h1>
+    <img src="LOGO.png" alt="CMP Lab Logo" class="lab-logo">
+  </div>
+  <h3>Department of Physics, Jashore University of Science and Technology</h3>
+</header>
 
   <section id="overview">
     <h2>Lab Overview</h2>
