--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <header>
   <div class="header-container">
     <h1>Condensed Matter Physics (CMP) Lab</h1>
-    <img src="LOGO.png" alt="CMP Lab Logo" class="lab-logo">
+    <img src="logo.png" alt="CMP Lab Logo" height="60">
   </div>
   <h3>Department of Physics, Jashore University of Science and Technology</h3>
 </header>
