--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <header>
   <div class="header-container">
     <h1>Condensed Matter Physics (CMP) Lab</h1>
-    <img src="logo.png" alt="CMP Lab Logo" height="60">
   </div>
+  <img src="LOGO.png" alt="CMP Lab Logo" height="60">
   <h3>Department of Physics, Jashore University of Science and Technology</h3>
 </header>
 
