--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
 <header>
   <div class="header-container">
+    <img src="LOGO.png" alt="CMP Lab Logo" height="60">
     <h1>Condensed Matter Physics (CMP) Lab</h1>
   </div>
   <img src="LOGO.png" alt="CMP Lab Logo" height="60">
