--- a/index.html
+++ b/index.html
@@ -1,56 +1,104 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Condensed Matter Physics Lab</title>
-  <link rel="stylesheet" href="style.css" />
+  <meta charset="UTF-8">
+  <title>CMP Lab</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+      display: flex;
+    }
+
+    /* Sidebar */
+    .sidebar {
+      width: 200px;
+      background-color: #003366;
+      color: white;
+      height: 100vh;
+      padding: 20px 10px;
+      box-sizing: border-box;
+      position: fixed;
+    }
+
+    .sidebar h2 {
+      font-size: 18px;
+      margin-bottom: 20px;
+    }
+
+    .sidebar a {
+      color: white;
+      text-decoration: none;
+      display: block;
+      padding: 10px;
+      margin-bottom: 10px;
+      border-radius: 4px;
+    }
+
+    .sidebar a:hover {
+      background-color: #0059b3;
+    }
+
+    /* Main content */
+    .main-content {
+      margin-left: 220px;
+      padding: 20px;
+    }
+
+    header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+
+    header h1 {
+      font-family: "Copperplate Gothic", "Copperplate", serif;
+      color: #003366;
+    }
+
+    .lab-logo {
+      height: 50px;
+    }
+  </style>
 </head>
 <body>
-<header>
-  <div class="header-container">
-    <img src="LOGO.png" alt="CMP Lab Logo" height="100">
+
+  <!-- Sidebar -->
+  <div class="sidebar">
+    <h2>CMP Lab</h2>
+    <a href="#overview">Overview</a>
+    <a href="#members">Members</a>
+    <a href="#contact">Contact</a>
   </div>
-  <h1>Condensed Matter Physics (CMP) Lab</h1>
-  <h3>Department of Physics, Jashore University of Science and Technology</h3>
-</header>
 
-  <section id="overview">
-    <h2>Lab Overview</h2>
-    <p>
-      The Condensed Matter Physics (CMP) Lab at the Department of Physics, JUST is focused on computational research
-      in condensed matter physics. We explore the structural, electronic, and thermodynamic properties of advanced materials
-      using Density Functional Theory (DFT) and other quantum simulations. Our work contributes to material innovations in
-      energy storage, spintronics, and optoelectronics.
-    </p>
-  </section>
+  <!-- Main content -->
+  <div class="main-content">
+    <header>
+      <h1>Condensed Matter Physics (CMP) Lab</h1>
+      <img src="logo.png" alt="CMP Lab Logo" class="lab-logo">
+    </header>
+    <h3>Department of Physics, Jashore University of Science and Technology</h3>
 
-  <section id="members">
-    <h2>Lab Members</h2>
-    <ul>
-      <li><strong>Faculty:</strong> Md. Mehade Hasan, Debashis Roy, Mohammad Tanvir Ahmed, Abdullah Al Roman</li>
-      <li><strong>Graduate Students:</strong> [List names]</li>
-      <li><strong>Undergraduate Researchers:</strong> [List names]</li>
-    </ul>
-  </section>
+    <section id="overview">
+      <h2>Overview</h2>
+      <p>The CMP Lab is focused on computational condensed matter physics. We investigate materials using DFT to support research in energy, spintronics, and optoelectronics.</p>
+    </section>
 
-  <section id="highlights">
-    <h2>Research Highlights</h2>
-    <p>Below are selected visual results from our recent publications.</p>
-    <img src="images/figure1.png" alt="Figure 1" width="400">
-    <img src="images/figure2.png" alt="Figure 2" width="400">
-    <!-- Add more figures as needed -->
-  </section>
+    <section id="members">
+      <h2>Lab Members</h2>
+      <ul>
+        <li><strong>Faculty:</strong> Md. Mehade Hasan, Debashis Roy, Mohammad Tanvir Ahmed, Abdullah Al Roman</li>
+        <li><strong>Graduate Students:</strong> [List names]</li>
+        <li><strong>Undergraduate Researchers:</strong> [List names]</li>
+      </ul>
+    </section>
 
-  <section id="contact">
-    <h2>Contact</h2>
-    <p>Email: cmplab@just.edu.bd</p>
-    <p>Location: Department of Physics, JUST, Jashore-7408, Bangladesh</p>
-  </section>
+    <section id="contact">
+      <h2>Contact</h2>
+      <p>Email: cmplab@just.edu.bd</p>
+      <p>Location: Department of Physics, JUST, Jashore-7408, Bangladesh</p>
+    </section>
+  </div>
 
-  <footer>
-    <p>&copy; 2025 CMP Lab, JUST</p>
-  </footer>
 </body>
 </html>
-
