--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
   <div class="main-content">
     <header>
       <h1>Condensed Matter Physics (CMP) Lab</h1>
-      <img src="logo.png" alt="CMP Lab Logo" class="lab-logo">
+      <img src="LOGO.png" alt="CMP Lab Logo" class="lab-logo">
     </header>
     <h3>Department of Physics, Jashore University of Science and Technology</h3>
 
