--- a/index.html
+++ b/index.html
@@ -199,8 +199,7 @@
 
   <div class="sidebar">
     <div class="sidebar-brand">
-      <img src="LOGO.png" alt="CMP Lab Logo">
-      <h2>CMP Lab</h2>
+      <img src="LOGO.png" alt="CMP Lab Logo" height="80">
     </div>
     <ul class="sidebar-nav">
       <li><a href="#overview" class="active">Overview</a></li>
@@ -257,9 +256,13 @@
       <p>Meet our dedicated team of researchers.</p>
       <div class="people-grid">
         <div class="person-card">
-          <img src="images/hasan.jpg" alt="Md. Mehade Hasan">
+          <img src="mmh.jpg" alt="Md. Mehade Hasan">
           <h4>Md. Mehade Hasan</h4>
-          <p><em>Principal Investigator</em></p>
+                <div class="member-links">
+                <a href="https://scholar.google.com/citations?user=0VZhIfkAAAAJ&hl=en&oi=ao" target="_blank">Google Scholar</a>
+                |
+                <a href="mailto:mehade@just.edu.bd">Email</a>
+            </div>
         </div>
         <div class="person-card">
           <img src="images/roy.jpg" alt="Debashis Roy">
