--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Condensed Matter Physics Lab</title>
@@ -259,9 +260,12 @@
           <img src="mmh.jpg" alt="Md. Mehade Hasan">
           <h4>Md. Mehade Hasan</h4>
                 <div class="member-links">
-                <a href="https://scholar.google.com/citations?user=0VZhIfkAAAAJ&hl=en&oi=ao" target="_blank">Google Scholar</a>
-                |
-                <a href="mailto:mehade@just.edu.bd">Email</a>
+                <a href="https://scholar.google.com/citations?user=0VZhIfkAAAAJ&hl=en&oi=ao" target="_blank" title="Google Scholar">
+                    <i class="fa-brands fa-google-scholar"></i>
+                </a>
+                <a href="mailto:mehade@just.edu.bd" title="Email">
+                    <i class="fa-solid fa-envelope"></i>
+                </a>
             </div>
         </div>
         <div class="person-card">
