--- a/index.html
+++ b/index.html
@@ -200,12 +200,12 @@
 
   <div class="sidebar">
     <div class="sidebar-brand">
-      <img src="LOGO.png" alt="CMP Lab Logo" height="80">
+      <img src="LOGO.png" alt="CMP Lab Logo" height="100">
     </div>
     <ul class="sidebar-nav">
       <li><a href="#overview" class="active">Overview</a></li>
       <li><a href="#members">Members</a></li>
-      <li><a href="#Highlights">Research</a></li>
+      <li><a href="#Highlights">Highlights</a></li>
       <li><a href="#publications">Publications</a></li>
       <li><a href="#contact">Contact</a></li>
     </ul>
