--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
 
   <div class="sidebar">
     <div class="sidebar-brand">
-      <img src="LOGO.png" alt="CMP Lab Logo" height="100">
+      <img src="LOGO.png" alt="CMP Lab Logo" width="100">
     </div>
     <ul class="sidebar-nav">
       <li><a href="#overview" class="active">Overview</a></li>
