--- a/index.html
+++ b/index.html
@@ -240,19 +240,40 @@
             </div>
         </div>
         <div class="person-card">
-          <img src="images/roy.jpg" alt="Debashis Roy">
+          <img src="droy.jpeg" alt="Debashis Roy">
           <h4>Debashis Roy</h4>
-          <p><em>Faculty</em></p>
+              <div class="member-links">
+                <a href="https://scholar.google.com/citations?user=e5rcITkAAAAJ&hl=en&authuser=1" target="_blank" title="Google Scholar">
+                    <i class="fa-brands fa-google-scholar"></i>
+                </a>
+                <a href="mailto:d.roy@just.edu.bd" title="Email">
+                    <i class="fa-solid fa-envelope"></i>
+                </a>
+            </div>
         </div>
         <div class="person-card">
-          <img src="images/ahmed.jpg" alt="Mohammad Tanvir Ahmed">
+          <img src="mta.jpeg" alt="Mohammad Tanvir Ahmed">
           <h4>Mohammad Tanvir Ahmed</h4>
-          <p><em>Faculty</em></p>
+             <div class="member-links">
+                <a href="https://scholar.google.com/citations?user=yTTmfwcAAAAJ&hl=en&authuser=1" target="_blank" title="Google Scholar">
+                    <i class="fa-brands fa-google-scholar"></i>
+                </a>
+                <a href="mailto:mt.ahmed01@just.edu.bd" title="Email">
+                    <i class="fa-solid fa-envelope"></i>
+                </a>
+            </div>
         </div>
         <div class="person-card">
           <img src="images/roman.jpg" alt="Abdullah Al Roman">
           <h4>Abdullah Al Roman</h4>
-          <p><em>Faculty</em></p>
+          <div class="member-links">
+                <a href="https://scholar.google.com/citations?user=MRoRrDMAAAAJ&hl=en&authuser=1" target="_blank" title="Google Scholar">
+                    <i class="fa-brands fa-google-scholar"></i>
+                </a>
+                <a href="mailto:aa.roman@just.edu.bd" title="Email">
+                    <i class="fa-solid fa-envelope"></i>
+                </a>
+          </div>
         </div>
       </div>
     </section>
