--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
 
   <div class="sidebar">
     <div class="sidebar-brand">
-      <img src="LOGO.png" alt="CMP Lab Logo" width="100">
+      <img src="LOGO.png" alt="CMP Lab Logo" width="200">
     </div>
     <ul class="sidebar-nav">
       <li><a href="#overview" class="active">Overview</a></li>
@@ -226,6 +226,7 @@
 <section id="members" class="content-section">
       <h2>Lab Members</h2>
       <p>Meet our dedicated team of researchers.</p>
+  <h3 style="color:#003366;">Founding Faculties</h3>
       <div class="people-grid">
         <div class="person-card">
           <img src="mmh.jpg" alt="Md. Mehade Hasan">
@@ -264,7 +265,7 @@
             </div>
         </div>
         <div class="person-card">
-          <img src="images/roman.jpg" alt="Abdullah Al Roman">
+          <img src="aar.jpeg" alt="Abdullah Al Roman">
           <h4>Abdullah Al Roman</h4>
           <div class="member-links">
                 <a href="https://scholar.google.com/citations?user=MRoRrDMAAAAJ&hl=en&authuser=1" target="_blank" title="Google Scholar">
@@ -276,7 +277,30 @@
           </div>
         </div>
       </div>
+
+  <div class="students-container">
+          <div class="student-list-column">
+              <h3>Graduate Members</h3>
+              <ul>
+                  <li>[Graduate Student Name 1]</li>
+                  <li>[Graduate Student Name 2]</li>
+                  <li>[Graduate Student Name 3]</li>
+                  </ul>
+          </div>
+          
+          <div class="student-list-column">
+              <h3>Undergraduate Members</h3>
+              <ul>
+                  <li>[Undergraduate Student Name 1]</li>
+                  <li>[Undergraduate Student Name 2]</li>
+                  <li>[Undergraduate Student Name 3]</li>
+                  </ul>
+          </div>
+      </div>
     </section>
+    </section>
+
+
     
     <section id="Highlights" class="content-section">
       <h2>Highlights</h2>
