--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
     .hero-section h1 {
       font-family: 'Georgia', serif;
-      color: #003366;
+      color: #660000;
       font-size: 2.5rem;
       margin-bottom: 10px;
     }
@@ -219,7 +219,7 @@
 
   <div class="sidebar">
     <div class="sidebar-brand">
-      <img src="LOGO.png" alt="CMP Lab Logo" width="400">
+      <img src="LOGO.png" alt="CMP Lab Logo">
     </div>
     <ul class="sidebar-nav">
       <li><a href="#overview" class="active">Overview</a></li>
