--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Condensed Matter Physics Lab</title>
+  <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@700&display=swap" rel="stylesheet">
+
   <style>
     /* Basic Styling & Layout */
     body {
@@ -83,7 +85,8 @@
     }
 
     .hero-section h1 {
-      font-family: 'Georgia', serif;
+      font-family: 'Cinzel', serif;
+      font-weight: 700;
       color: #660000;
       font-size: 2.5rem;
       margin-bottom: 10px;
@@ -191,7 +194,9 @@
         padding-bottom: 0;
       }
       .sidebar-brand img {
-        width: 60px;
+        width: 150px;
+        height: auto;
+        margin-bottom: 10px
       }
       .sidebar-nav {
         display: flex;
