--- a/index.html
+++ b/index.html
@@ -301,18 +301,43 @@
 
 <div class="students-container">
     <div class="student-list-column">
-        <h3>Graduate Members</h3>
+        <h3 style="color:#006603;">Graduate Members</h3>
         <ul>
-            <li>[Graduate Student Name 1]</li>
-            <li>[Graduate Student Name 2]</li>
+            <li>Abu Talha</li>
+            <li>Fatin Hasnat Shihab</li>
+            <li>Provati Rahman</li>
+            <li>Mim Khatun</li>
+            <li>Mahabub Hasan Rocky</li>
+            <li>Md Ashiqur Rahman</li>
+            <li>Bibekanada Sarker</li>
+            <li>Nosrat Shah Dip</li>
+            <li>Fatin Hasnat Shihab</li>
+            <li>Fatin Hasnat Shihab</li>
             </ul>
     </div>
     
     <div class="student-list-column">
-        <h3>Undergraduate Members</h3>
+        <h3 style="color:#006603;">Undergraduate Members</h3>
         <ul>
-            <li>[Undergraduate Student Name 1]</li>
-            <li>[Undergraduate Student Name 2]</li>
+          <li>Rashek Dewan Daymond</li>
+          <li>Nihal Siddique</li>
+          <li>Hasan Shahria Fahim</li>
+          <li>Afia Abida Mehnaz</li>
+          <li>Sharmin Akter Shetu</li>
+          <li>Shraboni Rani Biswas</li>
+          <li>Utso Jyoti Golder</li>
+          <li>Raisa Kaniz Zeem</li>
+          <li>Mohsina Faria Mou</li>
+          <li>Al Imran Akunjee</li>
+          <li>Maruf Hasan</li>
+          <li>Kaniz Fatema Riea</li>
+          <li>Sumaiya Zaman</li>
+          <li>Jesmin Sultana</li>
+          <li>Mohsina Aktar</li>
+          <li>Emamul Islam</li>
+          <li>Md Aminul Haque</li>
+          <li>Nuzhat Nawshin</li>
+          <li>Methila Akter</li>
             </ul>
     </div>
 
