--- a/index.html
+++ b/index.html
@@ -256,6 +256,9 @@
                 <a href="https://scholar.google.com/citations?user=0VZhIfkAAAAJ&hl=en&oi=ao" target="_blank" title="Google Scholar">
                     <i class="fa-brands fa-google-scholar"></i>
                 </a>
+                <a href="https://just.edu.bd/t/md-mehade-hasan" target="_blank" title="Personal Webpage">
+                    <i class="fa-solid fa-globe"></i>
+                </a>
                 <a href="mailto:mehade@just.edu.bd" title="Email">
                     <i class="fa-solid fa-envelope"></i>
                 </a>
@@ -267,6 +270,9 @@
               <div class="member-links">
                 <a href="https://scholar.google.com/citations?user=e5rcITkAAAAJ&hl=en&authuser=1" target="_blank" title="Google Scholar">
                     <i class="fa-brands fa-google-scholar"></i>
+                </a>
+                <a href="https://just.edu.bd/t/debashis-roy" target="_blank" title="Personal Webpage">
+                    <i class="fa-solid fa-globe"></i>
                 </a>
                 <a href="mailto:d.roy@just.edu.bd" title="Email">
                     <i class="fa-solid fa-envelope"></i>
@@ -280,6 +286,9 @@
                 <a href="https://scholar.google.com/citations?user=yTTmfwcAAAAJ&hl=en&authuser=1" target="_blank" title="Google Scholar">
                     <i class="fa-brands fa-google-scholar"></i>
                 </a>
+               <a href="https://just.edu.bd/t/mtahmed" target="_blank" title="Personal Webpage">
+                    <i class="fa-solid fa-globe"></i>
+                </a>
                 <a href="mailto:mt.ahmed01@just.edu.bd" title="Email">
                     <i class="fa-solid fa-envelope"></i>
                 </a>
@@ -292,6 +301,9 @@
                 <a href="https://scholar.google.com/citations?user=MRoRrDMAAAAJ&hl=en&authuser=1" target="_blank" title="Google Scholar">
                     <i class="fa-brands fa-google-scholar"></i>
                 </a>
+                <a href="https://just.edu.bd/t/aaroman" target="_blank" title="Personal Webpage">
+                    <i class="fa-solid fa-globe"></i>
+                </a>
                 <a href="mailto:aa.roman@just.edu.bd" title="Email">
                     <i class="fa-solid fa-envelope"></i>
                 </a>
@@ -303,6 +315,11 @@
     <div class="student-list-column">
         <h3 style="color:#006603;">Graduate Members</h3>
         <ul>
+            <li>Sumaya Yeasmin</li>
+            <li>Shahida Aktar Bithe</li>
+            <li>Antu Das</li>
+            <li>Palash Dhali</li>
+            <li>Afrin Oishi</li>
             <li>Abu Talha</li>
             <li>Fatin Hasnat Shihab</li>
             <li>Provati Rahman</li>
@@ -311,8 +328,7 @@
             <li>Md Ashiqur Rahman</li>
             <li>Bibekanada Sarker</li>
             <li>Nosrat Shah Dip</li>
-            <li>Fatin Hasnat Shihab</li>
-            <li>Fatin Hasnat Shihab</li>
+            
             </ul>
     </div>
     
