--- a/index.html
+++ b/index.html
@@ -224,11 +224,10 @@
       <img src="LOGO.png" alt="CMP Lab Logo" width="100">
     </div>
     <ul class="sidebar-nav">
-      <li><a href="#overview" class="active">Overview</a></li>
-      <li><a href="#members">Members</a></li>
-      <li><a href="#Highlights">Highlights</a></li>
-      <li><a href="#publications">Publications</a></li>
-      <li><a href="#contact">Contact</a></li>
+      <li><a href="index.html">Overview</a></li>
+      <li><a href="#members.html">Members</a></li>
+      <li><a href="highlights.html">Highlights</a></li>
+      <li><a href="publications.html">Publications</a></li>
     </ul>
   </div>
 
