--- a/highlights.html
+++ b/highlights.html
@@ -225,7 +225,7 @@
     </div>
     <ul class="sidebar-nav">
       <li><a href="index.html">Overview</a></li>
-      <li><a href="#members.html">Members</a></li>
+      <li><a href="members.html">Members</a></li>
       <li><a href="highlights.html">Highlights</a></li>
       <li><a href="publications.html">Publications</a></li>
       
