--- a/index.html
+++ b/index.html
@@ -240,7 +240,16 @@
 
     <section id="overview" class="content-section">
       <h2>Overview</h2>
-      <p>The CMP Lab is focused on **computational condensed matter physics**. We use cutting-edge theoretical methods, including **Density Functional Theory (DFT)**, to investigate the fundamental properties of materials. Our research supports critical advancements in **energy storage**, **spintronics**, and **optoelectronics**. We aim to design novel materials with specific electronic, magnetic, and optical properties, contributing to both foundational physics and practical technological applications.</p>
+      <p>The Condensed Matter Physics (CMP) Lab at the Department of Physics, Jashore University of Science and Technology, 
+        is focused on computational research aimed at understanding the fundamental properties of materials at the atomic scale. 
+        Our work is rooted in the theoretical frameworks of condensed matter physics, employing first-principles calculations and 
+        molecular dynamics (MD) simulations to investigate the structural, electronic, magnetic, and thermal behaviors of a wide 
+        range of materials.</p>
+
+        <p>The lab is currently equipped for high-level computational modeling, using state-of-the-art simulation techniques to 
+        address challenges in materials design for energy storage, nanoelectronics, spintronics, and quantum materials. 
+        As part of our long-term vision, we aim to expand into experimental materials research, including thin film synthesis 
+        and device fabrication, following the development of appropriate laboratory facilities.</p>
     </section>
 
 
