--- a/index.html
+++ b/index.html
@@ -240,16 +240,34 @@
 
     <section id="overview" class="content-section">
       <h2>Overview</h2>
-      <p>The Condensed Matter Physics (CMP) Lab at the Department of Physics, Jashore University of Science and Technology, 
+      <p style="text-align: justify;">The Condensed Matter Physics (CMP) Lab at the Department of Physics, Jashore University of Science and Technology, 
         is focused on computational research aimed at understanding the fundamental properties of materials at the atomic scale. 
         Our work is rooted in the theoretical frameworks of condensed matter physics, employing first-principles calculations and 
         molecular dynamics (MD) simulations to investigate the structural, electronic, magnetic, and thermal behaviors of a wide 
         range of materials.</p>
 
-        <p>The lab is currently equipped for high-level computational modeling, using state-of-the-art simulation techniques to 
+        <p style="text-align: justify;">The lab is currently equipped for high-level computational modeling, using state-of-the-art simulation techniques to 
         address challenges in materials design for energy storage, nanoelectronics, spintronics, and quantum materials. 
         As part of our long-term vision, we aim to expand into experimental materials research, including thin film synthesis 
         and device fabrication, following the development of appropriate laboratory facilities.</p>
+      <h3>Lab Facilities</h3>
+      <ul>
+        <li>High-Performance Computers for DFT & MD simulations</li>
+        <li>Licensed and open-source simulation packages, e.g., GaussView, Gaussian, CASTEP, AimALL, etc.</li>
+        <li>Visualization & data analysis tools, e.g., VESTA, Origin, VMD, etc. </li>
+        <li>Secure remote access for collaborative projects and simulations</li>
+        <li>Secure remote access for collaborative projects and simulations</li>
+        <li>Dedicated faculty mentors are available to guide students across a range of simulation-based research projects</li>
+        </ul>
+
+      <h3>Future Vision</h3>
+      <p>We plan to expand into experimental research with the development of facilities for:</p>
+      <ul>
+        <li>Thin film synthesis (e.g., perovskites, TMDs)</li>
+        <li>Structural and spectroscopic characterizations</li>
+        <li>Nanoscale device fabrication and testing</li>
+        <li>Solar cell fabrication</li>
+        </ul>
     </section>
 
 
