--- a/index.html
+++ b/index.html
@@ -252,21 +252,20 @@
         and device fabrication, following the development of appropriate laboratory facilities.</p>
       <h3>Lab Facilities</h3>
       <ul>
-        <li>High-Performance Computers for DFT & MD simulations</li>
-        <li>Licensed and open-source simulation packages, e.g., GaussView, Gaussian, CASTEP, AimALL, etc.</li>
-        <li>Visualization & data analysis tools, e.g., VESTA, Origin, VMD, etc. </li>
-        <li>Secure remote access for collaborative projects and simulations</li>
-        <li>Secure remote access for collaborative projects and simulations</li>
-        <li>Dedicated faculty mentors are available to guide students across a range of simulation-based research projects</li>
+        <li><i>High-Performance Computers for DFT & MD simulations</i></li>
+        <li><i>Licensed and open-source simulation packages, e.g., GaussView, Gaussian, CASTEP, AimALL, etc.</i></li>
+        <li><i>Visualization & data analysis tools, e.g., VESTA, Origin, VMD, etc. </i></li>
+        <li><i>Secure remote access for collaborative projects and simulations</i></li>
+        <li><i>Dedicated faculty mentors are available to guide students across a range of simulation-based research projects</i></li>
         </ul>
 
       <h3>Future Vision</h3>
       <p>We plan to expand into experimental research with the development of facilities for:</p>
       <ul>
-        <li>Thin film synthesis (e.g., perovskites, TMDs)</li>
-        <li>Structural and spectroscopic characterizations</li>
-        <li>Nanoscale device fabrication and testing</li>
-        <li>Solar cell fabrication</li>
+        <li><i>Thin film synthesis (e.g., perovskites, TMDs)</i></li>
+        <li><i>Structural and spectroscopic characterizations</i></li>
+        <li><i>Nanoscale device fabrication and testing</i></li>
+        <li><i>Solar cell fabrication</i></li>
         </ul>
     </section>
 
