--- a/highlights.html
+++ b/highlights.html
@@ -238,13 +238,23 @@
     
     <section id="Highlights" class="content-section">
       <h2>Highlights</h2>
-      <p>Our research is structured around several key themes:</p>
-      <ul>
-        <li>**Spintronic Materials:** Investigating materials for next-generation data storage and processing, focusing on magnetic properties and spin-dependent transport.</li>
-        <li>**Energy Storage:** Designing and simulating novel materials for batteries and supercapacitors with improved efficiency and longevity.</li>
-        <li>**Optoelectronic Devices:** Exploring materials with unique optical and electronic properties for applications in solar cells, LEDs, and photodetectors.</li>
-        <li>**Topological Matter:** Studying materials with robust quantum states for potential applications in fault-tolerant quantum computing.</li>
-      </ul>
+      <div class="research-container">
+        <div class="research-text-column">
+          <p>Our research is structured around several key themes:</p>
+          <ul>
+            <li>**Spintronic Materials:** Investigating materials for next-generation data storage and processing, focusing on magnetic properties and spin-dependent transport.</li>
+            <li>**Energy Storage:** Designing and simulating novel materials for batteries and supercapacitors with improved efficiency and longevity.</li>
+            <li>**Optoelectronic Devices:** Exploring materials with unique optical and electronic properties for applications in solar cells, LEDs, and photodetectors.</li>
+            <li>**Topological Matter:** Studying materials with robust quantum states for potential applications in fault-tolerant quantum computing.</li>
+          </ul>
+        </div>
+        <div class="research-image-column">
+          <img src="https://via.placeholder.com/300x150?text=Image+1" alt="Image of a research diagram">
+          <img src="https://via.placeholder.com/300x150?text=Image+2" alt="Image of a lab">
+          <img src="https://via.placeholder.com/300x150?text=Image+3" alt="Image of a material structure">
+          <img src="https://via.placeholder.com/300x150?text=Image+4" alt="Image of a simulation result">
+        </div>
+      </div>
     </section>
 
 
