--- a/highlights.html
+++ b/highlights.html
@@ -234,27 +234,26 @@
 
   <div class="main-content">
     
+<section id="Highlights" class="content-section" style="background-color: #ffffff; padding: 30px; margin-bottom: 40px; border-radius: 8px; box-shadow: 0 2px 4px rgba(0,0,0,0.05);">
+  <h2 style="color: #003366; border-bottom: 2px solid #0059b3; padding-bottom: 10px; margin-bottom: 20px;">Research</h2>
+  <div style="display: flex; gap: 40px;">
+    <div style="flex: 1;">
+      <p style="text-align: justify;">Our research is structured around several key themes:</p>
+      <ul>
+        <li>**Spintronic Materials:** Investigating materials for next-generation data storage and processing, focusing on magnetic properties and spin-dependent transport.</li>
+        <li>**Energy Storage:** Designing and simulating novel materials for batteries and supercapacitors with improved efficiency and longevity.</li>
+        <li>**Optoelectronic Devices:** Exploring materials with unique optical and electronic properties for applications in solar cells, LEDs, and photodetectors.</li>
+        <li>**Topological Matter:** Studying materials with robust quantum states for potential applications in fault-tolerant quantum computing.</li>
+      </ul>
+    </div>
+    <div style="flex: 1; display: grid; grid-template-columns: repeat(auto-fit, minmax(150px, 1fr)); gap: 15px;">
+      <img src="https://via.placeholder.com/300x150?text=Image+1" alt="Image of a research diagram" style="width: 100%; height: 150px; object-fit: cover; border-radius: 8px; box-shadow: 0 2px 4px rgba(0,0,0,0.1);">
+      <img src="https://via.placeholder.com/300x150?text=Image+2" alt="Image of a lab" style="width: 100%; height: 150px; object-fit: cover; border-radius: 8px; box-shadow: 0 2px 4px rgba(0,0,0,0.1);">
+      <img src="https://via.placeholder.com/300x150?text=Image+3" alt="Image of a material structure" style="width: 100%; height: 150px; object-fit: cover; border-radius: 8px; box-shadow: 0 2px 4px rgba(0,0,0,0.1);">
+      <img src="https://via.placeholder.com/300x150?text=Image+4" alt="Image of a simulation result" style="width: 100%; height: 150px; object-fit: cover; border-radius: 8px; box-shadow: 0 2px 4px rgba(0,0,0,0.1);">
+    </div>
+  </div>
 
-    
-    <section id="Highlights" class="content-section">
-      <h2>Highlights</h2>
-      <div class="research-container">
-        <div class="research-text-column">
-          <p>Our research is structured around several key themes:</p>
-          <ul>
-            <li>**Spintronic Materials:** Investigating materials for next-generation data storage and processing, focusing on magnetic properties and spin-dependent transport.</li>
-            <li>**Energy Storage:** Designing and simulating novel materials for batteries and supercapacitors with improved efficiency and longevity.</li>
-            <li>**Optoelectronic Devices:** Exploring materials with unique optical and electronic properties for applications in solar cells, LEDs, and photodetectors.</li>
-            <li>**Topological Matter:** Studying materials with robust quantum states for potential applications in fault-tolerant quantum computing.</li>
-          </ul>
-        </div>
-        <div class="research-image-column">
-          <img src="https://via.placeholder.com/300x150?text=Image+1" alt="Image of a research diagram">
-          <img src="https://via.placeholder.com/300x150?text=Image+2" alt="Image of a lab">
-          <img src="https://via.placeholder.com/300x150?text=Image+3" alt="Image of a material structure">
-          <img src="https://via.placeholder.com/300x150?text=Image+4" alt="Image of a simulation result">
-        </div>
-      </div>
     </section>
 
 
