--- a/highlights.html
+++ b/highlights.html
@@ -240,10 +240,12 @@
     <div style="flex: 1;">
       <p style="text-align: justify;">Our research is structured around several key themes:</p>
       <ul>
-        <li>**Spintronic Materials:** Investigating materials for next-generation data storage and processing, focusing on magnetic properties and spin-dependent transport.</li>
-        <li>**Energy Storage:** Designing and simulating novel materials for batteries and supercapacitors with improved efficiency and longevity.</li>
-        <li>**Optoelectronic Devices:** Exploring materials with unique optical and electronic properties for applications in solar cells, LEDs, and photodetectors.</li>
-        <li>**Topological Matter:** Studying materials with robust quantum states for potential applications in fault-tolerant quantum computing.</li>
+        <li><strong>Spintronic Materials:</strong> Investigating materials for next-generation data storage and processing, focusing on magnetic properties and spin-dependent transport.</li>
+        <li><strong>Energy Storage:</strong> Designing and simulating novel materials for batteries and supercapacitors with improved efficiency and longevity.</li>
+        <li><strong>Optoelectronic Devices:</strong> Exploring materials with unique optical and electronic properties for applications in solar cells, LEDs, and photodetectors.</li>
+        <li><strong>Sensing Materials:</strong> Studying nanomaterials for potential applications in gas sensing.</li>
+        <li><strong>Wastewater Treatment:</strong> Exploring nanomaterials to remove toxic heavy metal ions in wastewater treatment.</li>
+        <li><strong>Drug Delivery:</strong> Exploring nanomaterials to remove toxic heavy metal ions in wastewater treatment.</li>
       </ul>
     </div>
     <div style="flex: 1; display: grid; grid-template-columns: repeat(auto-fit, minmax(150px, 1fr)); gap: 15px;">
