--- a/highlights.html
+++ b/highlights.html
@@ -248,13 +248,24 @@
         <li><strong>Drug Delivery:</strong> Exploring nanomaterials to remove toxic heavy metal ions in wastewater treatment.</li>
       </ul>
     </div>
-    <div style="flex: 1; display: grid; grid-template-columns: repeat(auto-fit, minmax(150px, 1fr)); gap: 15px;">
-      <img src="https://via.placeholder.com/300x150?text=Image+1" alt="Image of a research diagram" style="width: 100%; height: 150px; object-fit: cover; border-radius: 8px; box-shadow: 0 2px 4px rgba(0,0,0,0.1);">
-      <img src="https://via.placeholder.com/300x150?text=Image+2" alt="Image of a lab" style="width: 100%; height: 150px; object-fit: cover; border-radius: 8px; box-shadow: 0 2px 4px rgba(0,0,0,0.1);">
-      <img src="https://via.placeholder.com/300x150?text=Image+3" alt="Image of a material structure" style="width: 100%; height: 150px; object-fit: cover; border-radius: 8px; box-shadow: 0 2px 4px rgba(0,0,0,0.1);">
-      <img src="https://via.placeholder.com/300x150?text=Image+4" alt="Image of a simulation result" style="width: 100%; height: 150px; object-fit: cover; border-radius: 8px; box-shadow: 0 2px 4px rgba(0,0,0,0.1);">
-    </div>
-  </div>
+<div style="flex: 1; display: grid; grid-template-columns: repeat(auto-fit, minmax(150px, 1fr)); gap: 15px;">
+    <figure style="margin: 0; padding: 0;">
+        <img src="R1.jpg" alt="Gas Sening via γ-SiC nanoflake" style="width: 100%; height: 150px; object-fit: cover; border-radius: 8px; box-shadow: 0 2px 4px rgba(0,0,0,0.1);">
+        <figcaption style="text-align: center; font-size: 0.9em; margin-top: 5px;">Gas Sening via γ-SiC nanoflake</figcaption>
+    </figure>
+    <figure style="margin: 0; padding: 0;">
+        <img src="R2.jpg" alt="HMI Removal" style="width: 100%; height: 150px; object-fit: cover; border-radius: 8px; box-shadow: 0 2px 4px rgba(0,0,0,0.1);">
+        <figcaption style="text-align: center; font-size: 0.9em; margin-top: 5px;">Heavy Metal Ion Removal</figcaption>
+    </figure>
+    <figure style="margin: 0; padding: 0;">
+        <img src="R3.jpg" alt="Double Perovskite" style="width: 100%; height: 150px; object-fit: cover; border-radius: 8px; box-shadow: 0 2px 4px rgba(0,0,0,0.1);">
+        <figcaption style="text-align: center; font-size: 0.9em; margin-top: 5px;">Double Perovskite</figcaption>
+    </figure>
+    <figure style="margin: 0; padding: 0;">
+        <img src="R4.jpg" alt="ESP map of double doped BNNS" style="width: 100%; height: 150px; object-fit: cover; border-radius: 8px; box-shadow: 0 2px 4px rgba(0,0,0,0.1);">
+        <figcaption style="text-align: center; font-size: 0.9em; margin-top: 5px;">ESP map of double doped BNNS</figcaption>
+    </figure>
+</div>
 
     </section>
 
