--- a/highlights.html
+++ b/highlights.html
@@ -240,12 +240,12 @@
     <div style="flex: 1;">
       <p style="text-align: justify;">Our research is structured around several key themes:</p>
       <ul>
-        <li><strong>Spintronic Materials:</strong> Investigating materials for next-generation data storage and processing, focusing on magnetic properties and spin-dependent transport.</li>
-        <li><strong>Energy Storage:</strong> Designing and simulating novel materials for batteries and supercapacitors with improved efficiency and longevity.</li>
-        <li><strong>Optoelectronic Devices:</strong> Exploring materials with unique optical and electronic properties for applications in solar cells, LEDs, and photodetectors.</li>
-        <li><strong>Sensing Materials:</strong> Studying nanomaterials for potential applications in gas sensing.</li>
-        <li><strong>Wastewater Treatment:</strong> Exploring nanomaterials to remove toxic heavy metal ions in wastewater treatment.</li>
-        <li><strong>Drug Delivery:</strong> Exploring nanomaterials to remove toxic heavy metal ions in wastewater treatment.</li>
+        <li style="text-align: justify;"><strong>Spintronic Materials:</strong> Investigating materials for next-generation data storage and processing, focusing on magnetic properties and spin-dependent transport.</li>
+        <li style="text-align: justify;"><strong>Energy Storage:</strong> Designing and simulating novel materials for batteries and supercapacitors with improved efficiency and longevity.</li>
+        <li style="text-align: justify;"><strong>Optoelectronic Devices:</strong> Exploring materials with unique optical and electronic properties for applications in solar cells, LEDs, and photodetectors.</li>
+        <li style="text-align: justify;"><strong>Sensing Materials:</strong> Studying nanomaterials for potential applications in gas sensing.</li>
+        <li style="text-align: justify;"><strong>Wastewater Treatment:</strong> Exploring nanomaterials to remove toxic heavy metal ions in wastewater treatment.</li>
+        <li style="text-align: justify;"><strong>Drug Delivery:</strong> Exploring nanomaterials to remove toxic heavy metal ions in wastewater treatment.</li>
       </ul>
     </div>
 <div style="flex: 1; display: grid; grid-template-columns: repeat(auto-fit, minmax(150px, 1fr)); gap: 15px;">
@@ -254,7 +254,7 @@
         <figcaption style="text-align: center; font-size: 0.9em; margin-top: 5px;">Gas Sening via γ-SiC nanoflake</figcaption>
     </figure>
     <figure style="margin: 0; padding: 0;">
-        <img src="R2.jpg" alt="HMI Removal" style="width: 100%; height: 150px; object-fit: cover; border-radius: 8px; box-shadow: 0 2px 4px rgba(0,0,0,0.1);">
+        <img src="R2.jpg" alt="HMI Removal" style="width: 100%; height: 150px;  border-radius: 8px; box-shadow: 0 2px 4px rgba(0,0,0,0.1);">
         <figcaption style="text-align: center; font-size: 0.9em; margin-top: 5px;">Heavy Metal Ion Removal</figcaption>
     </figure>
     <figure style="margin: 0; padding: 0;">
