--- a/highlights.html
+++ b/highlights.html
@@ -250,7 +250,7 @@
     </div>
 <div style="flex: 1; display: grid; grid-template-columns: repeat(auto-fit, minmax(150px, 1fr)); gap: 15px;">
     <figure style="margin: 0; padding: 0;">
-        <img src="R1.jpg" alt="Gas Sening via γ-SiC nanoflake" style="width: 100%; height: 150px; object-fit: cover; border-radius: 8px; box-shadow: 0 2px 4px rgba(0,0,0,0.1);">
+        <img src="R1.jpg" alt="Gas Sening via γ-SiC nanoflake" style="width: 100%; height: 150px; border-radius: 8px; box-shadow: 0 2px 4px rgba(0,0,0,0.1);">
         <figcaption style="text-align: center; font-size: 0.9em; margin-top: 5px;">Gas Sening via γ-SiC nanoflake</figcaption>
     </figure>
     <figure style="margin: 0; padding: 0;">
@@ -258,11 +258,11 @@
         <figcaption style="text-align: center; font-size: 0.9em; margin-top: 5px;">Heavy Metal Ion Removal</figcaption>
     </figure>
     <figure style="margin: 0; padding: 0;">
-        <img src="R3.jpg" alt="Double Perovskite" style="width: 100%; height: 150px; object-fit: cover; border-radius: 8px; box-shadow: 0 2px 4px rgba(0,0,0,0.1);">
+        <img src="R3.jpg" alt="Double Perovskite" style="width: 100%; height: 150px; border-radius: 8px; box-shadow: 0 2px 4px rgba(0,0,0,0.1);">
         <figcaption style="text-align: center; font-size: 0.9em; margin-top: 5px;">Double Perovskite</figcaption>
     </figure>
     <figure style="margin: 0; padding: 0;">
-        <img src="R4.jpg" alt="ESP map of double doped BNNS" style="width: 100%; height: 150px; object-fit: cover; border-radius: 8px; box-shadow: 0 2px 4px rgba(0,0,0,0.1);">
+        <img src="R4.jpg" alt="ESP map of double doped BNNS" style="width: 100%; height: 150px; border-radius: 8px; box-shadow: 0 2px 4px rgba(0,0,0,0.1);">
         <figcaption style="text-align: center; font-size: 0.9em; margin-top: 5px;">ESP map of double doped BNNS</figcaption>
     </figure>
 </div>
