--- a/publications.html
+++ b/publications.html
@@ -241,9 +241,7 @@
       <p>Here are some of our most recent publications. For a full list, please see our <a href="#">Google Scholar profile</a>.</p>
       <ul class="publication-list">
         <li>
-          <h4>DFT study on the electronic and magnetic properties of perovskite oxides</h4>
-          <p class="authors">M. M. Hasan, D. Roy, and M. T. Ahmed</p>
-          <p><em>Journal of Applied Physics,</em> 2024</p>
+          F.H. Shihab, M.F. Mou, D. Roy, A.A. Roman, M.T. Ahmed, "B4C4 nanocluster ring for toxic heavy metal ion adsorption from wastewater: A DFT study", <i>Journal of Physics and Chemistry of Solids</i>, 2025, 207, 112896.
         </li>
         <li>
           <h4>High-performance Li-ion battery anode materials from first-principles calculations</h4>
