--- a/publications.html
+++ b/publications.html
@@ -238,17 +238,22 @@
 
     <section id="publications" class="content-section">
       <h2>Publications</h2>
-      <p>Here are some of our most recent publications. For a full list, please see our <a href="#">Google Scholar profile</a>.</p>
-      <ul class="publication-list">
-        <li>
-          F.H. Shihab, M.F. Mou, D. Roy, A.A. Roman, M.T. Ahmed, "B4C4 nanocluster ring for toxic heavy metal ion adsorption from wastewater: A DFT study", <i>Journal of Physics and Chemistry of Solids</i>, 2025, 207, 112896.
-        </li>
-        <li>
-          <h4>High-performance Li-ion battery anode materials from first-principles calculations</h4>
-          <p class="authors">A. A. Roman, M. M. Hasan, and S. Khatun</p>
-          <p><em>Physical Review B,</em> 2023</p>
-        </li>
-      </ul>
+      <p>Here are some of our most recent publications.</p>
+      <ol class="publication-list">
+        <li>F.H. Shihab, M.F. Mou, D. Roy, A.A. Roman, M.T. Ahmed, "B4C4 nanocluster ring for toxic heavy metal ion adsorption from wastewater: A DFT study", Journal of Physics and Chemistry of Solids, 2025, 207, 112896.</li>
+        <li>M.F. Mou, M. Khatun, D. Roy, A.A. Roman, M.T. Ahmed, "Density Functional Theory Calculations of Tetragonal Graphene Nanobowls for Toxic Heavy Metal Ion Removal from Wastewater", ACS Applied Nano Materials, 2025, 8, 3497.</li>
+        <li>M.T. Ahmed, D. Roy, A.A. Roman, S. Islam, F. Ahmed, "C3B2 Quantum Dot: A Potential Candidate for Heavy Metal Ion Detection and Removal in Wastewater Treatment", LANGMUIR, 2025, 41, 9456.</li>
+        <li>K. Hossain, M.T. Ahmed et al., "First-principles investigations of As-doped tetragonal boron nitride nanosheet for toxic gas sensing application", Nanoscale Advances, 2024, 7, 354.</li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+      </ol>
     </section>
 
     
