--- a/publications.html
+++ b/publications.html
@@ -239,13 +239,13 @@
     <section id="publications" class="content-section">
       <h2>Publications</h2>
       <p>Here are some of our most recent publications.</p>
-      <ol class="publication-list">
+      <ol>
         <li>F.H. Shihab, M.F. Mou, D. Roy, A.A. Roman, M.T. Ahmed, "B4C4 nanocluster ring for toxic heavy metal ion adsorption from wastewater: A DFT study", Journal of Physics and Chemistry of Solids, 2025, 207, 112896.</li>
         <li>M.F. Mou, M. Khatun, D. Roy, A.A. Roman, M.T. Ahmed, "Density Functional Theory Calculations of Tetragonal Graphene Nanobowls for Toxic Heavy Metal Ion Removal from Wastewater", ACS Applied Nano Materials, 2025, 8, 3497.</li>
         <li>M.T. Ahmed, D. Roy, A.A. Roman, S. Islam, F. Ahmed, "C3B2 Quantum Dot: A Potential Candidate for Heavy Metal Ion Detection and Removal in Wastewater Treatment", LANGMUIR, 2025, 41, 9456.</li>
         <li>K. Hossain, M.T. Ahmed et al., "First-principles investigations of As-doped tetragonal boron nitride nanosheet for toxic gas sensing application", Nanoscale Advances, 2024, 7, 354.</li>
-        <li></li>
-        <li></li>
+        <li>M. Khatun, S. Hasan, D. Roy, A.A. Roman, M.T. Ahmed, "Ab initio study of hydrostatic pressure effect on structural, electronic, and optical properties of K₂MCdI₆ (M = Ca, Sr) perovskites", Optical and Quantum Electronics, 2024, 57, 39.</li>
+        <li>F.H. Shihab, A. Talha, M.T. Ahmed, A.A. Roman, D. Roy, "The effect of double-doped (B, N) on graphene’s N2O4 gas adsorption performance: an ab initio study", Adsorption, 2024, 31, 23.</li>
         <li></li>
         <li></li>
         <li></li>
