--- a/publications.html
+++ b/publications.html
@@ -240,7 +240,8 @@
       <h2>Publications</h2>
       <p>Here are some of our most recent publications.</p>
       <ol style="text-align: justify;>
-        <li> F.H. Shihab, M.F. Mou, D. Roy, A.A. Roman, M.T. Ahmed, "B4C4 nanocluster ring for toxic heavy metal ion adsorption from wastewater: A DFT study", Journal of Physics and Chemistry of Solids, 2025, 207, 112896.</li>
+        <li>M.H. Rocky, F.H. Shihab, D. Roy, A.A. Roman, M.T. Ahmed, "An ab initio study of S-doped penta-graphene for oxygen-based toxic gas sensing application", Materials Chemistry and Physics, 2025, 345, 131277. </li>
+        <li>F.H. Shihab, M.F. Mou, D. Roy, A.A. Roman, M.T. Ahmed, "B4C4 nanocluster ring for toxic heavy metal ion adsorption from wastewater: A DFT study", Journal of Physics and Chemistry of Solids, 2025, 207, 112896.</li>
         <li>M.F. Mou, M. Khatun, D. Roy, A.A. Roman, M.T. Ahmed, "Density Functional Theory Calculations of Tetragonal Graphene Nanobowls for Toxic Heavy Metal Ion Removal from Wastewater", ACS Applied Nano Materials, 2025, 8, 3497.</li>
         <li>M.T. Ahmed, D. Roy, A.A. Roman, S. Islam, F. Ahmed, "C3B2 Quantum Dot: A Potential Candidate for Heavy Metal Ion Detection and Removal in Wastewater Treatment", LANGMUIR, 2025, 41, 9456.</li>
         <li>K. Hossain, M.T. Ahmed et al., "First-principles investigations of As-doped tetragonal boron nitride nanosheet for toxic gas sensing application", Nanoscale Advances, 2024, 7, 354.</li>
@@ -256,9 +257,7 @@
         <li>I.J. Tonny, M. Khatun, D. Roy, A.A. Roman, M.T. Ahmed, "A first-principles investigation of BF3 and ClF3 gas sensing on N-defected AlN nanosheets", AIP Advances, 2024, 14, 045136.</li>
         <li>M.T. Ahmed, A.A. Roman, D. Roy et al.,"Phosphorus-doped T-graphene nanocapsule toward O3 and SO2 gas sensing: a DFT and QTAIM analysis", Scientific Reports, 2024, 14, 3467.</li>
         <li>M.T. Ahmed, D. Roy, A.A. Roman et al.,"A first principles study of RbSnCl3 perovskite toward NH3, SO2, and NO gas sensing", Nanoscale Advances (Royal Society of Chemistry), 2024, 6, 1218.</li>
-        <li></li>
-        <li></li>
-        <li></li>
+
       </ol>
     </section>
 
