--- a/highlights.html
+++ b/highlights.html
@@ -235,7 +235,7 @@
   <div class="main-content">
     
 <section id="Highlights" class="content-section" style="background-color: #ffffff; padding: 30px; margin-bottom: 40px; border-radius: 8px; box-shadow: 0 2px 4px rgba(0,0,0,0.05);">
-  <h2 style="color: #003366; border-bottom: 2px solid #0059b3; padding-bottom: 10px; margin-bottom: 20px;">Research</h2>
+  <h2 style="color: #003366; border-bottom: 2px solid #0059b3; padding-bottom: 10px; margin-bottom: 20px;">Highlights</h2>
   <div style="display: flex; gap: 40px;">
     <div style="flex: 1;">
       <p style="text-align: justify;">Our research is structured around several key themes:</p>
